force-app/main/default/objects/Event_Webinar__c/Event_Webinar__c.object-meta.xml
<CustomObject>
    <label>Event / Webinar</label>
    <nameField>
        <displayFormat>Event ID - {0000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event / Webinars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>