force-app/main/default/objects/Event_Webinar__c/fields/Hosted_By__c.field-meta.xml
<CustomField>
    <fullName>Hosted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hosted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Webinars</relationshipName>
    <type>Lookup</type>
</CustomField>