force-app/main/default/objects/Event_Webinar__c/fields/RSVP_Status__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Status__c</fullName>
    <label>RSVP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>