force-app/main/default/objects/Event_Webinar__c/listViews/Content_Review_Queue_Event_Webinar.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue_Event_Webinar</fullName>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>