force-app/main/default/objects/Event_Webinar__c/listViews/Event_Registration_Queue_Event_Webinar.listView-meta.xml
<ListView>
    <fullName>Event_Registration_Queue_Event_Webinar</fullName>
    <filterScope>Queue</filterScope>
    <label>Event Registration Queue</label>
    <queue>Event_Registration_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>