force-app/main/default/objects/Event_Webinar__c/listViews/Mentorship_Program_Queue_Event_Webinar.listView-meta.xml
<ListView>
    <fullName>Mentorship_Program_Queue_Event_Webinar</fullName>
    <filterScope>Queue</filterScope>
    <label>Mentorship Program Queue</label>
    <queue>Mentorship_Program_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>