force-app/main/default/objects/Event_Webinar__c/listViews/Newsletter_Subscription_Queue_Event_Webinar.listView-meta.xml
<ListView>
    <fullName>Newsletter_Subscription_Queue_Event_Webinar</fullName>
    <filterScope>Queue</filterScope>
    <label>Newsletter Subscription Queue</label>
    <queue>Newsletter_Subscription_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>