force-app/main/default/objects/Event_Webinar__c/listViews/Volunteer_Opportunity_Queue_Event_Webinar.listView-meta.xml
<ListView>
    <fullName>Volunteer_Opportunity_Queue_Event_Webinar</fullName>
    <filterScope>Queue</filterScope>
    <label>Volunteer Opportunity Queue</label>
    <queue>Volunteer_Opportunity_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>